# bpf_localization

./: CMakeLists.txt  Doxyfile  Makefile  biblio.bib  package.xml  setup.py
.github/workflows/: ros-ci.yml
data/calibrations/: boat_imu.csv
data/rosbag/calibration_tests/: imu_perturbations_1.bag  imu_perturbations_2.bag  imu_static_2.bag
data/rosbag/lake/: 2021_07_19_begining.bag
include/bpf_localization/: boat_bpf_localization.hpp  box_particle_filter.hpp  dynamical_systems.hpp  functions.hpp  particles.hpp  sensors.hpp  tests.hpp  utils.hpp
include/bpf_localization/dynamical_systems/: dynamical_systems.hpp  functions.hpp  ins.hpp  turtlebot2.hpp
include/bpf_localization/interfaces/: calibrable.hpp  gps.hpp  imu.hpp  interfaces.hpp  sensors.hpp
launch/: boat.launch  bpf_localization.launch  imu_calibration.launch
msg/: IntervalIMU.msg
python/bpf_localization/: plot_imu_calibration.py  test_pandas.py
rosbag/calibration_tests/: imu_static_1.bag
rostests/: imu_standalone.test
scripts/: plot_imu_calibration_node.py
src/: boat_bpf_localization.cpp  bpf_localization.cpp  imu_interface.cpp  imu_standalone.cpp
srv/: Calibration.srv  GetDiameters.srv
tests/: boat_bpf_localization_tests.cpp  bpf_generic_tests.cpp  bpf_init_tests_uniform_paving.cpp  bpf_init_tests_uniformly_choosen_paving.cpp  bpf_particle_given_dir_subdivision.cpp  bpf_particle_random_subdivision.cpp  bpf_particle_uniform_subdivision.cpp  bpf_particle_weight_tests.cpp  bpf_particles_tests_uniform_paving.cpp  bpf_particles_tests_uniformly_choosen_paving.cpp  bpf_resampling_guaranted_geometrical_tests.cpp  bpf_resampling_multinomial_tests.cpp  functions_tests.cpp  guaranted_integration_tests.cpp  imu_dynamical_model_tests.cpp  non_guaranted_affine_HEUN_integration_tests.cpp  non_guaranted_interval_HEUN_integration_tests.cpp  rostest_imu_standalone.cpp  utils_tests.cpp
tests/dynamical_systems/: functions_tests.cpp  guaranted_integration_tests.cpp  imu_dynamical_model_tests.cpp  non_guaranted_affine_HEUN_integration_tests.cpp  non_guaranted_interval_HEUN_integration_tests.cpp  turtlebot_tests.cpp
tests/interfaces/: calibrable_tests.cpp  file_tests.cpp  rostest_imu_standalone.cpp  sensors_tests.cpp
tests/turtlebot/: turtlebot_tests.cpp
